# GitSight-autonomous-se-platform

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  .flake8  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_init.py  002_repository_understanding.py  003_multi_branch.py  004_pull_requests.py  005_symbol_parent.py  006_code_chunks_embeddings.py  007_search_indexes.py  008_chunk_sources_and_diffs.py  009_repository_documents.py  010_pr_reviews.py
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  git_fixtures.py  test_ai_engine.py  test_analysis_service.py  test_auth.py  test_branch_limits.py  test_branch_tool.py  test_chat_api.py  test_chunk_service.py  test_context_builder.py  test_context_builder_tools.py  test_dependency_extractor.py  test_diff_chunk_service.py  test_documentation_api.py  test_documentation_discovery.py  test_documentation_engine.py  test_documentation_planner.py  test_documentation_prompt.py  test_documentation_service.py  test_embedding_service.py  test_file_chunker.py  test_file_distribution_service.py  test_file_filter.py  test_github_pull_requests.py  test_github_url.py  test_graph_impact_api.py  test_graph_query_service.py  test_graph_tool.py  test_groq_provider.py  test_health.py  test_indexing_api.py  test_indexing_plan.py  test_jobs_api.py  test_language_breakdown_schema.py  test_pr_review_api.py  test_pr_review_engine.py  test_pr_review_planner.py  test_pr_review_prompt.py  test_pr_review_service.py  test_prompt_builder.py  (+21 more)
(+208 files in other folders)
