[project]
name = "autonomous-software-engineer-backend"
version = "0.1.0"
description = "Backend API for the GitSight Autonomous Software Engineering Platform"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "gitpython>=3.1.44",
    "httpx>=0.28.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "tree-sitter>=0.24.0",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-python>=0.23.6",
    "uvicorn[standard]>=0.49.0",
    "pgvector>=0.3.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
